--- a/Length of Last Word.ipynb
+++ b/Length of Last Word.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b879186262dccc8a",
    "metadata": {
     "ExecuteTime": {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "eee8cfd767eed86f",
    "metadata": {
     "ExecuteTime": {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "ade5e310518bf0f4",
    "metadata": {
     "ExecuteTime": {
@@ -103,7 +103,7 @@
        "4"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,12 +139,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "149d5474",
+   "metadata": {},
+   "source": [
+    "# How to Optimize:\n",
+    "### *Here are a few potential improvements:*\n",
+    "\n",
+    "#### Avoid Creating an Intermediate List:\n",
+    "\n",
+    "* The .split() method creates a list, which can consume additional memory if the string is very large. \n",
+    "** Instead, you could iterate over the string in reverse to directly find the last word. This would save memory and slightly improve performance.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21b66824",
+   "metadata": {},
+   "source": [
+    "#### *Optimized Solution (Without .split()): Here’s a way to solve the problem using string manipulation directly, avoiding the creation of a list:*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "876e37fa2128a2d4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "class Solution(object):\n",
     "    def lengthOfLastWord(self, s):\n",
     "        \"\"\"\n",
@@ -164,25 +188,47 @@
     "            length += 1\n",
     "        return length"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d03a956b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol = Solution()\n",
+    "sol.lengthOfLastWord(s)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
