--- a/Practice_questions_1.ipynb
+++ b/Practice_questions_1.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "3c1e1d0f",
    "metadata": {},
    "outputs": [],
@@ -83,8 +83,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e7e92aa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def FrequencyOrder(self, s:str) -> str:\n",
+    "        from collections import Counter\n",
+    "\n",
+    "        #1. Frequency count of the string\n",
+    "        digit_count= Counter(s)\n",
+    "        \n",
+    "        #2. Sort the string according to most frequent\n",
+    "        desc_sorted= sorted(digit_count.items(), key= lambda x: x[1], reverse=True)\n",
+    "        \n",
+    "        #3 Multiply each string by it's frequency\n",
+    "        answer = '' \n",
+    "\n",
+    "        for key, value in desc_sorted:\n",
+    "            answer+= key*value\n",
+    "\n",
+    "        return answer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "536bd486",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11112233\n"
+     ]
+    }
+   ],
+   "source": [
+    "#initialize instance of class\n",
+    "sol = Solution()\n",
+    "\n",
+    "#Test case solution\n",
+    "print(f'{sol.FrequencyOrder(s)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0826ec8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Problem 3: Given a string 's', return a list of tuples where each tuple is (character, frequency), sorted from most to least frequent.\n",
+    "\n",
+    "s= \"banana\"\n",
+    "#Expected: [('a', 3), ('n', 2), ('b', 1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0e0a3acd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def characterFreq(self,s:str)-> str:\n",
+    "        from collections import Counter\n",
+    "\n",
+    "        return Counter(s).most_common() #frequency count and order by most frequent     \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "636425ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 3), ('n', 2), ('b', 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#initialize class \n",
+    "sol = Solution()\n",
+    "\n",
+    "print(f'{sol.characterFreq(s)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f894471d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Problem 4: Given a string s and an integer k, return the k most frequent characters in the string, sorted by frequency (highest to lowest). If two characters have the same frequency, order them alphabetically.\n",
+    "\n",
+    "#Example 1:\n",
+    "#Input: s = \"programming\", k = 2  \n",
+    "#Output: ['g', 'm']\n",
+    "\n",
+    "#Example 2:\n",
+    "#Input: s = \"hellohello\", k = 3  \n",
+    "#Output: ['l', 'e', 'h']\n",
+    "#Explanation: 'l' appears 4 times, 'e' and 'h' appear 2 times each. 'e' and 'h' are sorted alphabetically among ties.\n",
+    "\n",
+    "s ='languages'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bc98e82",
    "metadata": {},
    "outputs": [],
    "source": []
