--- a/Practice_questions_1.ipynb
+++ b/Practice_questions_1.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f894471d",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,8 @@
     "#Output: ['l', 'e', 'h']\n",
     "#Explanation: 'l' appears 4 times, 'e' and 'h' appear 2 times each. 'e' and 'h' are sorted alphabetically among ties.\n",
     "\n",
-    "s ='languages'"
+    "s ='languages'\n",
+    "k= 2"
    ]
   },
   {
@@ -206,7 +207,43 @@
    "id": "0bc98e82",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def kFrequency(self,s:str, k:int)-> list:\n",
+    "        from collections import Counter\n",
+    "\n",
+    "        #kFreq= [] #initialize empty list for k frequent values\n",
+    "\n",
+    "        #1. Frequency Count\n",
+    "        freq_count = Counter(s)\n",
+    "\n",
+    "        #2. Sort descending order, select k most frequent, return frequent elements\n",
+    "        kfreq = [x[0][0] for x in freq_count.most_common(k)]\n",
+    "        return kfreq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "54149a52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'g']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol = Solution()\n",
+    "\n",
+    "sol.kFrequency(s,k)"
+   ]
   }
  ],
  "metadata": {
