--- a/Practice_questions_1.ipynb
+++ b/Practice_questions_1.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0bc98e82",
    "metadata": {},
    "outputs": [],
@@ -218,13 +218,14 @@
     "        freq_count = Counter(s)\n",
     "\n",
     "        #2. Sort descending order, select k most frequent, return frequent elements\n",
-    "        kfreq = [x[0][0] for x in freq_count.most_common(k)]\n",
-    "        return kfreq"
+    "       # kfreq = \n",
+    "        \n",
+    "        return [x[0][0] for x in freq_count.most_common(k)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "54149a52",
    "metadata": {},
    "outputs": [
@@ -234,7 +235,7 @@
        "['a', 'g']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
