--- a/Practice_questions_1.ipynb
+++ b/Practice_questions_1.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "f894471d",
    "metadata": {},
    "outputs": [],
@@ -197,13 +197,13 @@
     "#Output: ['l', 'e', 'h']\n",
     "#Explanation: 'l' appears 4 times, 'e' and 'h' appear 2 times each. 'e' and 'h' are sorted alphabetically among ties.\n",
     "\n",
-    "s ='languages'\n",
-    "k= 2"
+    "s ='hellohello'\n",
+    "k= 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0bc98e82",
    "metadata": {},
    "outputs": [],
@@ -212,30 +212,36 @@
     "    def kFrequency(self,s:str, k:int)-> list:\n",
     "        from collections import Counter\n",
     "\n",
-    "        #kFreq= [] #initialize empty list for k frequent values\n",
-    "\n",
     "        #1. Frequency Count\n",
     "        freq_count = Counter(s)\n",
     "\n",
-    "        #2. Sort descending order, select k most frequent, return frequent elements\n",
-    "       # kfreq = \n",
+    "        #2. Sort in Descending order first frequency then alphabetically\n",
+    "        kfreq = sorted(freq_count.items(), key= lambda x: (-x[1],x[0]))\n",
     "        \n",
-    "        return [x[0][0] for x in freq_count.most_common(k)]"
+    "        #return k most freq values\n",
+    "        return [x for x, _ in kfreq[:k]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 115,
    "id": "54149a52",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('l', 4), ('e', 2), ('h', 2), ('o', 2)]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['a', 'g']"
+       "['l', 'e', 'h']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
