--- a/Practice_questions_1.ipynb
+++ b/Practice_questions_1.ipynb
@@ -244,6 +244,161 @@
     "\n",
     "sol.kFrequency(s,k)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "881528b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3. Group Characters with Same Frequency\n",
+    "    \n",
+    "#Given a string s, return a dictionary where keys are frequencies and \n",
+    "#values are lists of characters that appear with that frequency. \n",
+    "#Sort characters alphabetically inside each list.\n",
+    "\n",
+    "#Example:\n",
+    "\n",
+    "#s= \"successes\"\n",
+    "#Output: {1: ['u'], 2: ['c'], 3: ['e', 's']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "da4a9c3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"successes\"\n",
+    "\n",
+    "class Solution:\n",
+    "    def groupFrequency(self, s:str) -> dict:\n",
+    "        \"\"\"\n",
+    "        1. Given a string: INPUT\n",
+    "        2. Determine Frequency of each element\n",
+    "        3. Group elements with same frequencies in list\n",
+    "        4. sort in alphabetical order\n",
+    "        5. create dictionary {frequency: []}\n",
+    "        \"\"\"\n",
+    "        from collections import Counter\n",
+    "\n",
+    "        #1. Determine frequency\n",
+    "        freq_count=Counter(s)\n",
+    "        #print(freq_count)\n",
+    "\n",
+    "        #2. Group similar elements\n",
+    "        keys =[*freq_count]\n",
+    "        #print(keys)\n",
+    "\n",
+    "        grp={}\n",
+    "       \n",
+    "        for key,val in freq_count.items():\n",
+    "            if val not in grp:\n",
+    "                grp[val]= [key]\n",
+    "\n",
+    "            else:\n",
+    "                grp[val].append(key) \n",
+    "\n",
+    "        for freq in grp:\n",
+    "            grp[freq].sort()              \n",
+    "        \n",
+    "        return grp\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "0c8a2f3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter, defaultdict\n",
+    "\n",
+    "class Solution:\n",
+    "    def groupFrequency(self, s: str) -> dict:\n",
+    "        freq_count = Counter(s)\n",
+    "        \n",
+    "        grouped = defaultdict(list)\n",
+    "        print(\"1. grouped:\", grouped)\n",
+    "        \n",
+    "        # Group characters by frequency\n",
+    "        for char, freq in freq_count.items():\n",
+    "            print(\"before:\", grouped[freq])\n",
+    "            grouped[freq].append(char)\n",
+    "            print(\"after:\", grouped[freq])\n",
+    "        \n",
+    "        print(\"2. grouped:\", grouped)\n",
+    "        \n",
+    "        # Sort each group alphabetically\n",
+    "        for freq in grouped:\n",
+    "            grouped[freq].sort()\n",
+    "        print(\"3. grouped:\", grouped)\n",
+    "        return dict(grouped)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "bc9c3833",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution 1: {4: ['s'], 1: ['u'], 2: ['c', 'e']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sol = Solution()\n",
+    "\n",
+    "print(f\"Solution 1: {sol.groupFrequency(s)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7d686a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2. Visualize Frequencies with Matplotlib\n",
+    "#Given a string s, plot a bar chart showing the frequency of each character \n",
+    "# using matplotlib. Return nothing; just visualize.\n",
+    "\n",
+    "Example \n",
+    "#s = \"banana\"\n",
+    "#Expected Output:\n",
+    "#A bar chart with:\n",
+    "\n",
+    "#'a' at 3\n",
+    "\n",
+    "#'n' at 2\n",
+    "\n",
+    "#'b' at 1\n",
+    "\n",
+    "#Bonus: Sort bars in descending frequency order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "deddfe1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1. Characters Only (No Tuples)\n",
+    "#Given a string s, return a list of characters sorted by frequency (high to low), excluding the frequencies themselves.\n",
+    "\n",
+    "#Example:\n",
+    "\n",
+    "#Input: \"balloon\"\n",
+    "#Output: ['l', 'o', 'b', 'a', 'n']"
+   ]
   }
  ],
  "metadata": {
